# yolo_and_gst

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  utils.cpp  utils.h
